# desafio-teca-solutio

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml
Back-end/: app.py  dockerfile  requirements.txt
Back-end/application/services/: ProductService.py  UserService.py
Back-end/core/database/: Database.py
Back-end/core/helpers/: Criptograph.py
Back-end/domain/Queue/: Queue.py
Back-end/domain/entities/: ProductEntity.py  UserEntity.py
Back-end/domain/interfaces/: IProduct.py  IUser.py
Back-end/infrastructure/Models/: ProductsModel.py  UserModel.py
Back-end/infrastructure/repositories/: ProductRepositories.py  UserReposiories.py
Back-end/interface/blueprints/: Productprints.py  Userprints.py
Front-End/products-app/: README.md  angular.json  dockerfile  package-lock.json  package.json  tsconfig.app.json
Front-End/products-app/src/: index.html  main.ts
Front-End/products-app/src/app/: app-routing.module.ts  app.routes.ts
Front-End/products-app/src/app/core/guards/: auth.guard.ts
Front-End/products-app/src/app/core/models/: product.model.ts
Front-End/products-app/src/app/core/services/: auth.interceptor.ts  auth.service.ts  product.service.ts
Front-End/products-app/src/app/pages/login/: login.component.html  login.component.ts
Front-End/products-app/src/app/pages/products/: product.component.html  product.component.ts
Front-End/products-app/src/environments/: environment.ts
worker/: Database.py  Lista_msg.py  Operation.py  Worker.py  dockerfile  worker_messages_log.txt
